re PR debug/42800 (VLA DW_AT_upper_bound is no longer emitted)

PR debug/42800
	* cfgexpand.c (expand_used_vars): Keep artificial non-ignored vars
	in cfun->local_decls even if they have register types.

From-SVN: r157014